Feat: refresh token and logout
