# src/modules/auth/auth.types.ts
@@ -3,7 +3,11 @@ import {
   forgotPasswordSchema,
   loginSchema,
   resetPasswordSchema,
+  changePasswordSchema,
+  registerSchema,
 } from "../../validations/auth.validation";
+
+export type RegisterDTO = z.infer<typeof registerSchema>;
 
 export type LoginDTO = z.infer<typeof loginSchema>;
 
@@ -15,9 +19,26 @@ export interface LoginResponseDTO {
   tokens: Tokens;
 }
 
+export interface UserResponseDTO {
+  id: string;
+  username: string;
+  email: string;
+  role: string;
+}
+
 export type ForgotPasswordDTO = z.infer<typeof forgotPasswordSchema>;
 
 export type ResetPasswordDTO = z.infer<typeof resetPasswordSchema>;
+
+export type ChangePasswordDTO = z.infer<typeof changePasswordSchema>;
+
+export interface RefreshTokenDTO {
+  refreshToken: string;
+}
+
+export interface UserSessionDTO {
+  id: string;
+}
 
 // Private classes
 interface Tokens {
