# src/modules/users/user.routes.ts
@@ -1,8 +1,5 @@
 import { Router } from "express";
-import { registerUser } from "./user.controller";
 
 const router = Router();
-
-router.post("/register", registerUser);
 
 export default router;
