# src/validations/auth.validation.ts
@@ -1,5 +1,44 @@
 import { z } from "zod";
 
+export const loginSchema = z.object({
+  email: z
+    .string()
+    .min(1, "Email is required")
+    .email("Please enter a valid email address"),
+  password: z
+    .string()
+    .min(1, "Password is required")
+    .min(8, "Password must be at least 8 characters long")
+    .regex(/[a-z]/, "Password must contain at least one lowercase letter")
+    .regex(/[A-Z]/, "Password must contain at least one uppercase letter")
+    .regex(/[0-9]/, "Password must contain at least one number")
+    .regex(
+      /[^a-zA-Z0-9]/,
+      "Password must contain at least one special character",
+    ),
+});
+
+export const forgotPasswordSchema = z.object({
+  email: z
+    .string()
+    .min(1, "Email is required")
+    .email("Please enter a valid email address"),
+});
+
+export const resetPasswordSchema = z.object({
+  newPassword: z
+    .string()
+    .min(1, "Password is required")
+    .min(8, "Password must be at least 8 characters long")
+    .regex(/[a-z]/, "Password must contain at least one lowercase letter")
+    .regex(/[A-Z]/, "Password must contain at least one uppercase letter")
+    .regex(/[0-9]/, "Password must contain at least one number")
+    .regex(
+      /[^a-zA-Z0-9]/,
+      "Password must contain at least one special character",
+    ),
+});
+
 export const registerSchema = z.object({
   username: z
     .string()
@@ -33,12 +72,8 @@ export const registerSchema = z.object({
   }),
 });
 
-export const loginSchema = z.object({
-  email: z
-    .string()
-    .min(1, "Email is required")
-    .email("Please enter a valid email address"),
-  password: z
+export const changePasswordSchema = z.object({
+  oldPassword: z
     .string()
     .min(1, "Password is required")
     .min(8, "Password must be at least 8 characters long")
@@ -49,16 +84,7 @@ export const loginSchema = z.object({
       /[^a-zA-Z0-9]/,
       "Password must contain at least one special character",
     ),
-});
 
-export const forgotPasswordSchema = z.object({
-  email: z
-    .string()
-    .min(1, "Email is required")
-    .email("Please enter a valid email address"),
-});
-
-export const resetPasswordSchema = z.object({
   newPassword: z
     .string()
     .min(1, "Password is required")
